--- a/src/pages/Work/work.css
+++ b/src/pages/Work/work.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   gap: -10px;
   margin-top: 180px;
+  margin-left: 100px;
 }
 
 .card {
@@ -12,4 +13,6 @@
 
 .work {
   position: fixed;
+  margin-top: 100px;
+  margin-left: 100px;
 }
